# swc-neuron

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
benches/: swc.rs
data/: 2017-6-9_525_ptp-3ok244_day_3_9.swc  Cell_305_MPD_8_FT_100_XYZ_Sorted-swc_N3DFix-swc_pruned.swc  Cha-F-700113.CNG.swc  FRT-40A-x-109-947-L13-D5.CNG.swc  OB_Adulthood_Control_F_Animal07_Trace014.swc  OB_Adulthood_Control_M_Animal05_Trace048.swc  VGlut-F-400533.CNG.swc  WT-Contralateral-18.CNG.swc
src/: bin.rs  header.rs  lib.rs  structures.rs
