[package]
name = "swc-neuron"
version = "0.5.0"
authors = ["Chris Barnes <cbarnes@mrc-lmb.cam.ac.uk>"]
edition = "2018"
license = "MIT"
description = "Library and CLI utility for interacting with SWC neuronal morphology files"
repository = "https://github.com/clbarnes/swc-neuron"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
thiserror = "1.0.20"
structopt = {version = "0.3", optional = true}
anyhow = {version = "1.0", optional = true}

[features]
default = []
cli = ["structopt", "anyhow"]

[lib]
name = "swc_neuron"
path = "src/lib.rs"

[[bin]]
name = "swctool"
path = "src/bin.rs"
required-features = ["cli"]

[dev-dependencies]
criterion = "0.5.1"

[package.metadata.release]
publish = false
# no-dev-version = true

[[bench]]
name = "swc"
harness = false
